[package]
name = "auth_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.0"
mongodb = { version = "3.1.0", features = ["sync"] }
bcrypt = "0.12"
env_logger = "0.10"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
futures = "0.3.30"
futures-util = "0.3.30"
